# template-rust-actix

./: Cargo.toml  README.md  migrate_and_run.sh
.noop/: app.yaml  app.yml  blueprint.yaml
.noop/runbooks/: quickstart.yaml
migrations/00000000000001_create_users/: up.sql
sql/: add_user.sql  schemas.sql
src/: main.rs  models.rs  schema.rs
