[package]
name = "actix-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
config = "0.13.1"
deadpool-postgres = { version = "0.11", features = ["serde"] }
derive_more = "0.99.7"
dotenvy = "0.15"
serde = { version = "1.0.137", features = ["derive"] }
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = "0.7.6"